# InfoMaker

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  test.json
src/: main.rs
src/bot/: bot_command.rs  bot_state.rs  database_state.rs  global_bot.rs  handler.rs  mod.rs
src/cfg/: btn.rs  config_state.rs  mod.rs  on_click_action.rs
